test-suite/tests/roundtrip/invalid/semantic/typecheck/arith_expr_in_bool_list/tree-sitter.generated-error.txt
tests/roundtrip/invalid/semantic/typecheck/arith_expr_in_bool_list/input.essence:2:26:
  |
2 | such that and([x, 2 < 3, 4 + 5])
  |                          ^
Type error: 4 + 5
	Exepected: bool
	Got: arithmetic expression